# Neverness

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  MERGED_ARCHITECTURE_AND_PROGRESS.md  Nerverness.slnx  Neverness.slnx  Neverness1.slnx  README.md  VisionGal.sln  build_log.txt  build_log2.txt  build_log3.txt  imgui.ini
Engine/Source/: CMakeLists.txt
Engine/Source/.claude/: settings.local.json
Engine/Source/Application/: CMakeLists.txt
Engine/Source/Application/HNGRuntimeCoreDemo/: CMakeLists.txt  Main.cpp
Engine/Source/Application/NNDesktopApplication/: CMakeLists.txt  Main.cpp
Engine/Source/Application/NNLauncher/: CMakeLists.txt  Main.cpp
Engine/Source/Application/NNNodeGraphApp/: CMakeLists.txt  Main.cpp
Engine/Source/Application/NNPackageTool/: CMakeLists.txt  Main.cpp
Engine/Source/Application/NNRuntimeKernelApplication/: CMakeLists.txt  Main.cpp
Engine/Source/Application/VGDesktopApplication/: CMakeLists.txt  Main.cpp
Engine/Source/Application/VGLauncher/: CMakeLists.txt  Main.cpp
Engine/Source/Application/VGNodeGraphApp/: CMakeLists.txt  Main.cpp
Engine/Source/Application/VGPackageTool/: CMakeLists.txt  Main.cpp
Engine/Source/Bridge/: CMakeLists.txt
Engine/Source/Bridge/NNBridgeImGui/: CMakeLists.txt
Engine/Source/Core/: CMakeLists.txt  KERNEL_ARCHITECTURE_AND_PROGRESS.md
Engine/Source/Core/NNCore/: CMakeLists.txt  CoreModuleDefinitions.h  NNCoreSources.cmake
Engine/Source/Core/NNFileSystem/: CMakeLists.txt
Engine/Source/Core/NNMediaCore/: CMakeLists.txt
Engine/Source/Core/NNMeta/: CMakeLists.txt  NNMetaSources.cmake
Engine/Source/Core/NNNodeGraphCore/: CMakeLists.txt
Engine/Source/Core/NNNodeGraphNodes/: CMakeLists.txt  HNGRuntimeNodesConfig.h
Engine/Source/Core/NNPlatformCore/: CMakeLists.txt  HCorePlatformConfig.h  NNPlatformCoreSources.cmake
Engine/Source/Docs/: 10.Save_Scene_Feature.md  15.Audio_Video_Asset_Pipeline_Architecture.md  2.Component_Runtime_Access_Layer_Plan.md  5.Texture-Asset-Pipeline-Architecture.md  6.ImGuiEx-Window-Management-System.md  7.AssetOpening-System-Upgrade.md  Neverness Engine Industrial‑grade Modern Asset Runtime and Asset Pipeline Architecture.md
Engine/Source/Docs/Fixed/: Texture_Load_DLL_Singleton_Fix.md
Engine/Source/Editor/: CMakeLists.txt
Engine/Source/Editor/HNGEditor/: CMakeLists.txt
Engine/Source/Editor/HNGEditorCore/: CMakeLists.txt
Engine/Source/Editor/HNodeGraphEditor/: CMakeLists.txt
Engine/Source/Editor/NNEditor/: CMakeLists.txt  Main.cpp  NNEditorSources.cmake
Engine/Source/Editor/NNEditorFramework/: CMakeLists.txt  NNEditorFrameworkSources.cmake
Engine/Source/Editor/NNEditorFrameworkLegacy/: CMakeLists.txt  Framework.h
Engine/Source/Editor/NNEditorLegacy/: Main.cpp
Engine/Source/Editor/VGEditor/: CMakeLists.txt  Main.cpp
Engine/Source/Editor/VGEditorAuthoringGraph/: CMakeLists.txt
Engine/Source/Editor/VGEditorComGalgame/: CMakeLists.txt
Engine/Source/Editor/VGEditorComponent/: CMakeLists.txt  Config.h  Framework.h
Engine/Source/Editor/VGEditorCore/: CMakeLists.txt  IncludeCore.h  VGEditorCoreConfig.h
Engine/Source/Editor/VGEditorExtensions/: CMakeLists.txt
Engine/Source/Editor/VGEditorFramework/: CMakeLists.txt  Config.h
Engine/Source/Editor/VGEditorGalgame/: CMakeLists.txt  Module.h
Engine/Source/Editor/VGEditorGalgameSequence/: CMakeLists.txt
Engine/Source/Editor/VGGalEditor/: CMakeLists.txt  VGGalEditorConfig.h
Engine/Source/Experiments/: CMakeLists.txt
Engine/Source/Experiments/Docs/: Phase3-Task.md  Phase4.3-Task.md  Phase6-Task.md  Phase8-Task.md
Engine/Source/Experiments/NNRuntimeCore/: CMakeLists.txt
Engine/Source/Experiments/NNRuntimeDiligent/: CMakeLists.txt  NNDiligentConfig.h
Engine/Source/Experiments/NNRuntimeNativeEngineAPI/: CMakeLists.txt
Engine/Source/Experiments/NNRuntimeRender/: CMakeLists.txt  NNRenderCore.h
Engine/Source/Experiments/NNRuntimeRenderAssets/: CMakeLists.txt
Engine/Source/Experiments/NNRuntimeRenderBootstrap/: CMakeLists.txt
Engine/Source/Experiments/NNRuntimeSRP/: CMakeLists.txt
Engine/Source/Experiments/RmlDiligent/: CMakeLists.txt  standalone.cmake
Engine/Source/Host/: CMakeLists.txt  main.cpp
Engine/Source/Kernel/: CMakeLists.txt
Engine/Source/Kernel/HCore/: CMakeLists.txt
Engine/Source/Kernel/HCorePlatform/: CMakeLists.txt
Engine/Source/Kernel/HFileSystem/: CMakeLists.txt
Engine/Source/Kernel/HMedia/: CMakeLists.txt
Engine/Source/Kernel/HMeta/: CMakeLists.txt
Engine/Source/Kernel/HNGRuntimeCore/: CMakeLists.txt
Engine/Source/Kernel/HNGRuntimeNodes/: CMakeLists.txt
Engine/Source/Kernel/NNFileSystem/: CMakeLists.txt
Engine/Source/Kernel/NNKernel/: CMakeLists.txt
Engine/Source/Kernel/NNMediaCore/: CMakeLists.txt
Engine/Source/Legacy/: CMakeLists.txt  README.md
Engine/Source/Managed/: CMakeLists.txt  Directory.Build.props  MANAGED_ARCHITECTURE_AND_PROGRESS.md  MANAGED_RUNTIME_ARCHITECTURE_AND_PROGRESS.md  MERGED_ARCHITECTURE_AND_PROGRESS.md  NevernessDotNet.cmake  merge_docs.py
Engine/Source/Managed/Editor/: Directory.md  (+4 more)
Engine/Source/ManagedRuntime/: MANAGED_RUNTIME_ARCHITECTURE_AND_PROGRESS.md  MERGED_ARCHITECTURE_AND_PROGRESS.md  merge_docs.py
Engine/Source/Plan/: 2.PlayMode_Snapshot_Restore_Fix.md  4.RmlUI_ECS_System_Implementation.md  AvaloniaFrontend_ContentBrowser.md  AvaloniaFrontend_Implementation_Plan.md  CSharpScriptAssetOpener_IDE集成.md  Diligent_Prebuild_Plan.md  RmlDiligent_3DTransform_Fix.md  RmlDiligent_Effects_Rendering_Fix.md  RmlDiligent_MSAA_Plan.md  RmlDiligent_Performance_Optimization.md  Runtime_Diligent_Migration_Plan.md  VFS_NewAPI_Plan.md  ninja_msvc_deps_encoding_fix.md  nnruntimeapplication_migration_plan.md
Engine/Source/Rendering/: CMakeLists.txt
Engine/Source/Runtime/: CMakeLists.txt  Directory.md  GALGAME_MODULE_ARCHITECTURE_AND_PROGRESS.md  RUNTIME_ARCHITECTURE_AND_PROGRESS.md
Engine/Source/RuntimeGalgame/: GALGAME_MODULE_ARCHITECTURE_AND_PROGRESS.md  MERGED_ARCHITECTURE_AND_PROGRESS.md
Runtime/VGRHI/: CMakeLists.txt
Runtime/VGRHI/Interface/: Device.h  Mesh.h
(+5231 files in other folders)
