add_subdirectory ("NNAPI")
add_subdirectory ("NNRuntimeLua")
add_subdirectory ("NNRuntimeVFS")
add_subdirectory ("NNRuntimePak")
add_subdirectory ("NNRuntimeImGui")
add_subdirectory ("NNRuntimeCore")
add_subdirectory ("NNRuntimeEngine")
add_subdirectory ("NNRuntimeRenderer2D")
add_subdirectory ("NNRuntimeRmlui")
add_subdirectory ("NNRuntimeMedia")
add_subdirectory ("NNRuntimeEngineServices")
